# Copyright (C) 2007-2012  CEA/DEN, EDF R&D, OPEN CASCADE
#
# This library is free software; you can redistribute it and/or
# modify it under the terms of the GNU Lesser General Public
# License as published by the Free Software Foundation; either
# version 2.1 of the License.
#
# This library is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public
# License along with this library; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307 USA
#
# See http://www.salome-platform.org/ or email : webmaster.salome@opencascade.com
#

include $(top_srcdir)/adm_local/unix/make_common_starter.am

admlocalwithoutkerneldir   = $(prefix)/adm_local_without_kernel
admlocalwithoutkernelm4dir = $(prefix)/adm_local_without_kernel/unix/config_files

dist_admlocalwithoutkernelm4_DATA = \
    ac_cxx_depend_flag.m4 \
    ac_cxx_have_sstream.m4 \
    ac_cxx_namespaces.m4 \
    ac_cxx_option.m4 \
    ac_cxx_template_options.m4 \
    ac_cxx_use_std_iostream.m4 \
    ac_cxx_warnings.m4 \
    ac_linker_options.m4 \
    acx_pthread.m4 \
    check_boost.m4 \
    check_cppunit.m4 \
    check_hdf5.m4 \
    check_htmlgen.m4 \
    check_lam.m4 \
    check_libxml.m4 \
    check_mpi.m4 \
    check_mpich.m4 \
    check_openmpi.m4 \
    check_swig.m4 \
    check_sphinx.m4 \
    enable_pthreads.m4 \
    production.m4 \
    python.m4 \
    local_install.m4 \
    hack_libtool.m4

EXTRA_DIST += DEPRECATED
